Product CSS Align correction

--- a/src/Components/Product.css
+++ b/src/Components/Product.css
@@ -1,17 +1,23 @@
 .product-item {
   color: hsl(0, 0%, 0%);
-  border: 1px hsl(0, 0%, 85%) solid;
+  border: 1px hsl(0, 0%, 93%) solid;
   border-radius: 3px;
-  margin: 5px;
+  margin: 12px;
   font-size: calc(10px + 1.1vmin);
   padding: 8px;
   display: flex;
   flex: 1;
   flex-direction: row;
-
+  justify-content: start;
 }
 
 .product-item .product-item-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.product-item .product-item-image img {
   width: 64px;
   height: 64px;
 }
@@ -21,13 +27,16 @@
   width: 100%;
   justify-content: space-between;
   flex-direction: column;
+  margin-left: 2px;
   height: 100%;
 }
 
 .product-item .product-item-name {
   text-align: left;
-  font-size: calc(8px + 1.2vmin);
-  margin-left: calc(5px + 1vmin);
+  font-size: calc(8px + 1.3vmin);
+  margin-top: 2px;
+  margin-left: calc(5px + 1.2vmin);
+
 }
 
 .product-item .product-item-price {
